--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,13 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Node modules
 node_modules
+
+# Build output
 dist
-dist-ssr
-*.local
+
+# Logs
+*.log
+
+# Local environment variables
 .env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
